--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-    <div class="top-text">Αυτό είναι το κείμενο από πάνω</div>
+    <div class="top-text">Μαγαζί 1</div>
     
     <!-- Ενσωμάτωση του Kuula 360º -->
     <iframe src="https://kuula.co/share/collection/7bVk3?logo=1&info=1&fs=1&vr=0&sd=1&gyro=0&thumbs=1" 
@@ -46,18 +46,10 @@
     <!-- Δημιουργία QR Code -->
     <div id="qrcode"></div>
     
-    <div class="bottom-text">Αυτό είναι το κείμενο από κάτω</div>
+    <div class="bottom-text">Ακολούθησέ μας στα social media</div>
 
-    <script>
-        // Δημιουργία QR Code με τη βιβλιοθήκη QRCode.js
-        var qrcode = new QRCode(document.getElementById("qrcode"), {
-            text: "https://kuula.co/share/collection/7bVk3?logo=1&info=1&fs=1&vr=0&sd=1&gyro=0&thumbs=1",  // Το URL του Kuula
-            width: 128,  // Πλάτος του QR code
-            height: 128,  // Ύψος του QR code
-            colorDark: "#000000",  // Χρώμα του QR code
-            colorLight: "#ffffff",  // Χρώμα φόντου
-            correctLevel: QRCode.CorrectLevel.H  // Επίπεδο διόρθωσης σφαλμάτων
-        });
-    </script>
+    <div class="company-name" onclick="window.location.href='https://www.instagram.com/anastasios.mazanis/';">
+        Μαγαζί 1 Instagram
+    </div>
 </body>
 </html>
