--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Μαγαζί 1</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Helvetica, sans-serif; 
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -29,7 +29,7 @@
             font-weight: bold;
             color: #007bff;
             cursor: pointer;
-            text-decoration: underline;
+            text-decoration: none;
         }
         iframe {
             width: 80%;
@@ -40,7 +40,7 @@
 </head>
 <body>
     <!-- Κείμενο πάνω -->
-    <div class="top-text">Μαγαζί 1</div>
+    <div class="top-text">Coffee Shop 1</div>
     
     <!-- Ενσωμάτωση του Kuula 360º -->
     <iframe src="https://kuula.co/share/collection/7bVk3?logo=1&info=1&fs=1&vr=0&sd=1&gyro=0&thumbs=1" 
@@ -51,10 +51,9 @@
     <!-- Κείμενο κάτω -->
     <div class="bottom-text">Ακολούθησε μας στα social media</div>
 
-    <!-- Όνομα επιχείρησης με clickable σύνδεσμο -->
-    <div class="company-name" onclick="window.location.href='https://www.instagram.com/anastasios.mazanis/';">
-        Μαγαζί 1 Instagram
-    </div>
+    <a href="https://your-link-here.com" target="_blank" class="company-name">
+        Instagram
+    </a>
     
 </body>
 </html>
