--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            background-color: #f0f0f0;
+            background: linear-gradient(to bottom, #6F4F37, #000000);
         }
         .top-text {
             font-size: 24px;
@@ -51,7 +51,7 @@
     <!-- Κείμενο κάτω -->
     <div class="bottom-text">Ακολούθησε μας στα social media</div>
 
-    <a href="https://your-link-here.com" target="_blank" class="company-name">
+    <a href="https://www.instagram.com/anastasios.mazanis/" target="_blank" class="company-name">
         Instagram
     </a>
     
