--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
             font-size: 24px;
             font-weight: bold;
             margin-bottom: 20px;
+            color: white;
+            text-transform: uppercase;
         }
         .bottom-text {
             font-size: 20px;
             margin-top: 20px;
+            color: white;
+            text-transform: uppercase;
         }
         .company-name {
             font-size: 22px;
