--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
     <!-- Κείμενο κάτω -->
     <div class="bottom-text">Ακολούθησε μας στα social media</div>
 
-    <a href="https://www.instagram.com/anastasios.mazanis/" target="_blank" class="company-instagram">
+    <a href="https://www.instagram.com" target="_blank" class="company-instagram">
         <i class="fab fa-instagram"> Coofee.Shop1</i>
     </a>
     
-    <a href="https://www.instagram.com/anastasios.mazanis/" target="_blank" class="company-facebook">
+    <a href="https://www.instagram.com" target="_blank" class="company-facebook">
         <i class="fab fa-facebook"> Coofee Shop 1</i>
     </a>
-    <a href="https://www.instagram.com/anastasios.mazanis/" target="_blank" class="company-youtube">
+    <a href="https://www.instagram.com" target="_blank" class="company-youtube">
         <i class="fab fa-youtube"> Coofee Shop 1</i>
     </a>
     
