--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
     <div class="top-text">Coffee Shop 1</div>
     
     <!-- Ενσωμάτωση του Kuula 360º -->
-    <iframe src="https://kuula.co/share/collection/7bVk3?logo=1&info=1&fs=1&vr=0&sd=1&gyro=0&thumbs=1" 
-            title="Kuula 360 Image"
+    <iframe src="https://kuula.co/share/collection/7bVXh?logo=1&info=1&fs=1&vr=0&sd=1&gyro=0&thumbs=1" 
+            title="Coffee Shop 1"
             allowfullscreen>
     </iframe>
 
