--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
         <i class="fab fa-instagram"> Coofee.Shop1</i>
     </a>
     
-    <a href="https://www.instagram.com" target="_blank" class="company-facebook">
+    <a href="https://www.facebook.com" target="_blank" class="company-facebook">
         <i class="fab fa-facebook"> Coofee Shop 1</i>
     </a>
-    <a href="https://www.instagram.com" target="_blank" class="company-youtube">
+    <a href="https://www.youtube.com" target="_blank" class="company-youtube">
         <i class="fab fa-youtube"> Coofee Shop 1</i>
     </a>
     
