--- a/index.html
+++ b/index.html
@@ -37,6 +37,61 @@
             margin-bottom: 20px;
         }
 
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 15px;
+            margin-top: 40px;
+            width: 90%;
+            max-width: 1200px;
+        }
+
+        .gallery img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            aspect-ratio: 4 / 3;
+            border-radius: 10px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            cursor: pointer;
+        }
+
+        .gallery img:hover {
+            transform: scale(1.02);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Lightbox με scaling */
+        .lightbox {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            background-color: rgba(0, 0, 0, 0.9);
+            display: none;
+            justify-content: center;
+            align-items: center;
+            z-index: 999;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+
+        .lightbox img {
+            max-width: 90vw;
+            max-height: 90vh;
+            width: auto;
+            height: auto;
+            object-fit: contain;
+            border-radius: 10px;
+            box-shadow: 0 0 40px rgba(0, 0, 0, 0.6);
+        }
+
+
+        .lightbox:target {
+            display: flex;
+        }
+
         .info-map-container {
             display: flex;
             flex-direction: column;
@@ -98,6 +153,32 @@
         <div class="tour-container">
             <iframe src="https://kuula.co/share/collection/7bRf6?logo=1&info=1&fs=1&vr=0&sd=1&gyro=0&thumbs=1"
                 width="100%" height="500px" frameborder="0" allowfullscreen></iframe>
+        </div>
+
+         <div class="gallery">
+            <a href="#img1"><img src="images/image 1.jpg" alt=></a>
+            <a href="#img2"><img src="images/image 2.jpg" alt=></a>
+            <a href="#img3"><img src="images/image 3.jpg" alt=></a>
+            <a href="#img4"><img src="images/image 4.jpg" alt=></a>
+            <a href="#img5"><img src="images/image 5.jpg" alt=></a>
+            <!-- Πρόσθεσε όσες φωτογραφίες θέλεις -->
+        </div>
+
+        <!-- Lightbox modals -->
+        <div id="img1" class="lightbox">
+            <a href="#"><img src="images/image 1.jpg" alt="Gaya Athens 1"></a>
+        </div>
+        <div id="img2" class="lightbox">
+            <a href="#"><img src="images/image 2.jpg" alt="Gaya Athens 2"></a>
+        </div>
+        <div id="img3" class="lightbox">
+            <a href="#"><img src="images/image 3.jpg" alt="Gaya Athens 3"></a>
+        </div>
+        <div id="img4" class="lightbox">
+            <a href="#"><img src="images/image 4.jpg" alt="Gaya Athens 4"></a>
+        </div>
+        <div id="img5" class="lightbox">
+            <a href="#"><img src="images/image 5.jpg" alt="Gaya Athens 5"></a>
         </div>
 
         <div class="info-map-container">
