--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
                 <div class="social-menu">
                     <a href="https://www.facebook.com/XOM.drinkeatcafe.gr" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://www.instagram.com/xomdrinkeatcafe/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    <button class="button-5" role="button" onclick="document.location='https://xom.gr/menus/'">MENU</button>
+                    <button class="button-5" role="button" onclick="window.open('https://xom.gr/menus/', '_blank')">MENU</button>
+
                 </div>
             </div>
 
