--- a/index.html
+++ b/index.html
@@ -157,25 +157,25 @@
         </div>
 
          <div class="gallery">
-            <a href="#img1"><img src="images/ΧΟΜ_1.jpg" alt=></a>
-            <a href="#img2"><img src="images/ΧΟΜ_2.jpg" alt=></a>
-            <a href="#img3"><img src="images/ΧΟΜ_3.jpg" alt=></a>
-            <a href="#img4"><img src="images/ΧΟΜ_4.jpg" alt=></a>
+            <a href="#img1"><img src="images/XOM_1.jpg" alt=></a>
+            <a href="#img2"><img src="images/XOM_2.jpg" alt=></a>
+            <a href="#img3"><img src="images/XOM_3.jpg" alt=></a>
+            <a href="#img4"><img src="images/XOM_4.jpg" alt=></a>
             <!-- Πρόσθεσε όσες φωτογραφίες θέλεις -->
         </div>
 
         <!-- Lightbox modals -->
         <div id="img1" class="lightbox">
-            <a href="#"><img src="images/ΧΟΜ_1.jpg" alt="ΧΟΜ 1"></a>
+            <a href="#"><img src="images/XOM_1.jpg" alt="ΧΟΜ 1"></a>
         </div>
         <div id="img2" class="lightbox">
-            <a href="#"><img src="images/ΧΟΜ_2.jpg" alt="ΧΟΜ 2"></a>
+            <a href="#"><img src="images/XOM_2.jpg" alt="ΧΟΜ 2"></a>
         </div>
         <div id="img3" class="lightbox">
-            <a href="#"><img src="images/ΧΟΜ_3.jpg" alt="ΧΟΜ 3"></a>
+            <a href="#"><img src="images/XOM_3.jpg" alt="ΧΟΜ 3"></a>
         </div>
         <div id="img4" class="lightbox">
-            <a href="#"><img src="images/ΧΟΜ_4.jpg" alt="ΧΟΜ 4"></a>
+            <a href="#"><img src="images/XOM_4.jpg" alt="ΧΟΜ 4"></a>
         </div>
 
         <div class="info-map-container">
